[tool.poetry]
name = "pyallocopt"
version = "0.1.0"
description = ""
authors = ["Alexis Asseman <alexis@semiotic.ai>"]
license = "Apache-2"
readme = "README.md"
packages = [{include = "allocopt"}]

[tool.poetry.dependencies]
python = "^3.10"
juliacall = "^0.9.12"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyright = "^1.1.296"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
